# witsale

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt  test_api.py  test_finance.py  test_password.py
backend/alembic/: env.py
backend/alembic/versions/: 16acaab4abdb_create_user_role_permission_tables.py  2da5f6985b34_create_user_role_permission_tables.py  56e3198ffae0_create_finance_tables.py  782544ff20bf_create_inventory_tables.py  91c529494f3c_create_customer_tables.py  9470a73312c3_create_order_tables.py  978e8b420782_initial_migration.py  b24043fb4d63_create_product_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/application/services/: customer_service.py  finance_service.py  inventory_service.py  order_service.py  product_service.py
backend/app/core/: config.py  database.py  error_handler.py  init_data.py  middleware.py  security.py
backend/app/infrastructure/cache/: redis.py
backend/app/infrastructure/persistence/: customer_repository.py  finance_repository.py  inventory_repository.py  order_repository.py  product_repository.py
backend/app/interfaces/api/: deps.py  routes.py
backend/app/models/: __init__.py  customer.py  finance.py  inventory.py  order.py  product.py  user.py
backend/app/schemas/: __init__.py  auth.py  customer.py  finance.py  inventory.py  order.py  product.py
backend/app/services/: auth_service.py
backend/domain/: __init__.py
backend/infra/: __init__.py
backend/tests/: test_customer.py  test_product.py
docs/: README.md
(+98 files in other folders)
