[tool.poetry]
name = "witsale-backend"
version = "1.0.0"
description = "Enterprise sales management system backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.1.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
aioredis = "^2.0.1"
python-multipart = "^0.0.6"
alembic = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
